--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
   implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.5.2'
   implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
   implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.5.3'
+// https://mvnrepository.com/artifact/org.projectlombok/lombok
+  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
 
 }
 
